# bankruptcy-prior-engine

./: .gitignore  CLAUDE.md  Makefile  NEXT_STEPS.md  config.yaml  decisions.md  pyproject.toml
notebooks/: 00_data_exploration.ipynb  01_data_foundation.ipynb  02_llm_lln_experiment.ipynb  03_popper_falsification.ipynb  _explore_helpers.py  xgb_tuning_summary.py
notebooks/exports/: xgb_tuning_summary.html
results/: 00_data_exploration.html  01_data_foundation.html  02_llm_lln_experiment.html  03_popper_falsification.html  xgb_tune_grid.csv
scripts/: build_notebook_00.py  build_notebook_01.py  build_notebook_02.py  build_notebook_03.py  download_data.py  init_db.py  tune_xgb.py
src/: bootstrap.py  bradley_terry.py  config.py  data_pipeline.py  models.py  monitoring.py  ollama_client.py  popper.py  serialisation.py  woe_transformer.py
tests/: conftest.py  test_bradley_terry.py  test_ollama_client.py  test_popper.py  test_stage3_integration.py  test_woe_transformer.py
