[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expert_prior_engine"
version = "0.1.0"
description = "Bayesian expert-prior credit risk engine on the Polish Bankruptcy dataset."
requires-python = ">=3.10"
authors = [{ name = "Alex Fokas", email = "alexander.fokas.90@gmail.com" }]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "liac-arff>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*", "monitoring*"]
